--- a/src/main/webapp/resources/css/main_selection.css
+++ b/src/main/webapp/resources/css/main_selection.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* 선택메뉴 메인제목 */
 .main-selection {
-  background-color: #FAFAFA;
+  background-color: #FFFFFF;
   display: flex;
   flex-direction: column;
   align-items: center;
