--- a/src/main/webapp/resources/css/main_page.css
+++ b/src/main/webapp/resources/css/main_page.css
@@ -4,7 +4,6 @@
 	font-size: 80px;
 	font-weight: bold;
 	font-family: 'Spoqa Han Sans Neo', 'sans-serif';
-	margin-top: 40px;
 }
 .main_img_src {
 	width: 100%;
@@ -19,6 +18,7 @@
 	border-radius: 50px;
 	width: 280px;
 	height: 280px;
+	flex-shrink: 0;
 }
 .item_registration {
 	font-size: medium;
@@ -29,6 +29,7 @@
 	width: 280px;
 	height: 280px;
 	margin-left: 100px;
+	flex-shrink: 0;
 }
 .animal_find {
 	font-size: medium;
@@ -39,6 +40,7 @@
 	width: 280px;
 	height: 280px;
 	margin-left: 100px;
+	flex-shrink: 0;
 }
 .animal_registration {
 	font-size: medium;
@@ -49,4 +51,5 @@
 	width: 280px;
 	height: 280px;
 	margin-left: 100px;
+	flex-shrink: 0;
 }
