--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                        	
+                                            	
+    
     
     
     
@@ -10,7 +11,8 @@
     
     
     <wb-module deploy-name="sprjt09-1.0.0-BUILD-SNAPSHOT">
-                                                                                		
+                                                                                        		
+        
         
         
         
@@ -21,7 +23,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                		
+                                                                                        		
+        
         
         
         
@@ -32,7 +35,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                		
+                                                                                        		
+        
         
         
         
@@ -43,7 +47,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                                		
+                                                                                        		
+        
         
         
         
@@ -54,9 +59,9 @@
         
         
         <property name="java-output-path" value="target/classes"/>
-                
-        <property name="context-root" value="sprjt09"/>
-                                                                                	
+        <property name="context-root" value="miaa"/>
+                                                                                        	
+    
     
     
     
@@ -67,7 +72,8 @@
     
     
     </wb-module>
-                                        
+                                            
+
 
 
 
