--- a/src/main/webapp/resources/css/mypage_customer_inquiry_list_page.css
+++ b/src/main/webapp/resources/css/mypage_customer_inquiry_list_page.css
@@ -1,16 +1,109 @@
+.main-body {
+    width: 1220px;
+    font-family: "Noto Sans KR", sans-serif;
+}
+
+/* table */
+
+.content-wrapper{
+	display: flex;
+	justify-content: center;
+}
+.content-container {
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+    width: 1160px;
+    box-shadow:
+    0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+    0px 2px 6px 0px rgba(0, 0, 0, 0.14),
+    0px 2px 2px 0px rgba(0, 0, 0, 0.14);
+}
+.list-control-container {
+    height: 83px;
+    width: 1160px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.btn-list {
+  
+  border-radius: 8px;
+  padding: 10px 16px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  position: relative;
+  color: #ffffff;
+  border-style: none;
+}
+#btn-delete {
+    margin-right: 10px;
+    background-color: #7F56D9;
+    color: white;
+}
+#btn-write {
+    margin-right: 10px;
+    background-color: #F9F5FF;
+    color: #6941C6;
+}
+
+.info-table {
+    width: 1160px;
+    border-collapse: collapse;
+}
+
+.info-table th {
+    background-color: #FAFAFA;
+    border: 1px solid #FAFAFA;
+    color : 
+    font-size: 14px;
+    height: 50px;
+    border-bottom: 1px solid #EAECF0;
+}
+
+.info-table td {
+    background-color: white;
+    font-size: 14px;
+    height: 80px;
+    color: #101828;
+    text-align: center;
+    border-top: 1px solid #EAECF0;
+}
+.table-check-box {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid #999;
+    appearance: none;
+    cursor: pointer;
+    transition: background 0.2s;
+}
+ input[type="checkbox"]:checked {
+    background: #0066ff;
+    border: none;
+  }
+ input[type="checkbox"]:hover {
+    background: #E2F4FF;
+    border: none;
+  }
+   
+.ctrl-icon {
+    width: 40px;
+    height: 40px;
+}
+
+/* page */
+
 .result-container {
     width: 1180px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 59px;
 }
-
-.card-photo > img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
-
 .page-container {
     font-size: calc(1rem * 14 / 16);
     display: flex;
@@ -85,221 +178,4 @@ ul.switchBtn-container > li > a {
     border-radius: 8px;
     padding: 0.3em 0.6em;
     border: 1px solid #D0D5DD;
-}
-
-/*    !!!!!!*/
-.main-body {
-    width: 1220px;
-}
-
-.main-selection {
-    width: 1180px;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.page-route {
-    font-size: 12px;
-}
-
-.selection-name {
-    font-size: 48px;
-    font-weight: 600;
-    margin-top: 10px;
-    text-decoration-line: underline;
-    text-underline-offset: 10px;
-    text-decoration-thickness: 2px;
-}
-
-.content-selection {
-    width: 1180px;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.search-container {
-    height: 68px;
-    display: flex;
-    align-items: center;
-}
-
-.searchbar-content {
-    position: relative;
-    margin-left: 12px;
-    margin-right: auto;
-}
-
-.searchbar-content input {
-    width: 400px;
-    height: 44px;
-    padding-left: 42px;
-    border: 1px solid #D0D5DD;
-    font-size: 16px;
-    border-radius: 10px;
-    search-input-placeholder-color: #667085;
-}
-
-.searchbar-content img {
-    position: absolute;
-    width: 20px;
-    left: 14px;
-    top: 12px;
-}
-
-.search-container > select {
-    margin-left: auto;
-    width: 113px;
-    height: 44px;
-    border: 1px solid #D0D5DD;
-    border-radius: 10px;
-    font-size: 14px;
-    font-family: "Noto Sans KR", sans-serif;
-}
-
-.keyword-container {
-    height: 42px;
-    font-size: 13px;
-    display: flex;
-    align-items: center;
-}
-
-.keyword-container a {
-    margin-left: 10px;
-    text-decoration: none;
-}
-
-.list-control-container {
-    height: 83px;
-    width: 1160px;
-    display: flex;
-    align-items: center;
-}
-
-#content-select {
-    margin-left: 24px;
-    width: 113px;
-    height: 44px;
-    border: 1px solid #D0D5DD;
-    border-radius: 10px;
-    font-size: 16px;
-    font-family: "Noto Sans KR", sans-serif;
-}
-
-.content-container {
-    border: 2px solid #EAECF0;
-    border-radius: 5px;
-    width: 1160px;
-}
-
-.btn-list {
-    width: 116px;
-    height: 44px;
-    font-size: 14px;
-    border: 1px solid #D0D5DD;
-    border-radius: 10px;
-}
-
-#btn-set-alert {
-    margin-left: auto;
-    background-color: white;
-    display: flex;
-    padding: 0;
-    align-items: center;
-}
-
-#btn-set-alert img {
-    width: 25px;
-    margin-left: 16px;
-}
-
-#btn-off-alert {
-    margin-left: 16px;
-    background-color: white;
-    display: flex;
-    padding: 0;
-    align-items: center;
-}
-
-#btn-off-alert img {
-    width: 25px;
-    margin-left: 16px;
-}
-
-#btn-delete {
-    margin-left: 16px;
-    margin-right: 24px;
-    background-color: #7F56D9;
-    color: white;
-}
-
-.info-table {
-    width: 1160px;
-    border-collapse: collapse;
-}
-
-.info-table th {
-    background-color: #EAECF0;
-    border: 1px solid #EAECF0;
-    font-size: 12px;
-    height: 44px;
-    color: #667085;
-}
-
-.info-table td {
-    background-color: white;
-    font-size: 14px;
-    height: 142px;
-    color: #101828;
-    text-align: center;
-}
-
-.table-check {
-    width: 68px;
-}
-
-.table-check-box {
-    width: 20px;
-    height: 20px;
-    border-radius: 5px;
-}
-
-.table-classification {
-    width: 74px;
-}
-
-.table-img {
-    width: 180px;
-}
-
-.table-title {
-    width: 284px;
-}
-
-.table-happen-dt {
-    width: 176px;
-}
-
-.table-happen-place {
-    width: 200px;
-}
-
-.table-alert-yn {
-    width: 93px;
-}
-
-.table-ctrl {
-    width: 85px;
-}
-
-.item-image {
-    width: 120px;
-    height: 120px;
-    border-radius: 10px;
-}
-
-.ctrl-icon {
-    width: 40px;
-    height: 40px;
 }
