--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                        	
+                                                	
+    
+    
     
     
     
@@ -10,7 +12,11 @@
     
     
     <wb-module deploy-name="sprjt09-1.0.0-BUILD-SNAPSHOT">
-                                                                                		
+                
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                                                                                                		
+        
+        
         
         
         
@@ -21,7 +27,9 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                		
+                                                                                                		
+        
+        
         
         
         
@@ -32,7 +40,9 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                		
+                                                                                                		
+        
+        
         
         
         
@@ -43,7 +53,10 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                                		
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+                                                                                                		
+        
+        
         
         
         
@@ -56,7 +69,9 @@
         <property name="java-output-path" value="target/classes"/>
                 
         <property name="context-root" value="sprjt09"/>
-                                                                                	
+                                                                                                	
+    
+    
     
     
     
@@ -67,7 +82,9 @@
     
     
     </wb-module>
-                                        
+                                                
+
+
 
 
 
