알림 뷰 적용

--- a/src/main/webapp/resources/css/mypage_matching_alarm_list_page.css
+++ b/src/main/webapp/resources/css/mypage_matching_alarm_list_page.css
@@ -7,6 +7,53 @@ a:hover{
 	color: #0066ff;
 }
 
+/* 물건 */
+.item_tag_01 {
+   font-weight: bold;
+   background-color: #F7E8FF;
+   color: #8910D9;
+   border-radius: 30%;
+   margin-left: 50px;
+   margin-right: 60px;
+}
+
+/* 에어팟 */
+.item_tag_02 {
+   font-weight: bold;
+   background-color: #E8F1FF;
+   color: #0250EC;
+   border-radius: 30%;
+}
+
+
+/* 2024-03-06시경 */
+.item_tag_03 {
+   font-weight: bold;
+   background-color: #FFE5E8;
+   color: #D20319;
+   border-radius: 30%;
+}
+
+
+/* 전자기기 > 무선이어폰 */
+.item_tag_04 {
+   font-weight: bold;
+   background-color: #FFEFE4;
+   color: #EE5800;
+   border-radius: 30%;
+}
+
+
+/* 월게,이마트,트레이더스 */
+.item_tag_05 {
+   font-weight: bold;
+   background-color: #D8F7E6;
+   color: #00692A;
+   border-radius: 30%;
+   color: blue;
+   text-align: right;
+}
+
 /* table */
 .content-wrapper {
 	display: flex;
