--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                            	
+                                                    	
+    
+    
     
     
     
@@ -11,19 +13,9 @@
     
     
     <wb-module deploy-name="sprjt09-1.0.0-BUILD-SNAPSHOT">
-                                                                                        		
+                                                                                                        		
         
         
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                        		
         
         
         
@@ -35,7 +27,9 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                        		
+                                                                                                        		
+        
+        
         
         
         
@@ -47,7 +41,10 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                                        		
+        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+                                                                                                        		
+        
+        
         
         
         
@@ -59,8 +56,12 @@
         
         
         <property name="java-output-path" value="target/classes"/>
+                        
+        
         <property name="context-root" value="miaa"/>
-                                                                                        	
+                                                                                                        	
+    
+    
     
     
     
@@ -72,7 +73,9 @@
     
     
     </wb-module>
-                                            
+                                                    
+
+
 
 
 
