--- a/src/main/webapp/resources/css/mypage_customer_inquiry_detail_page.css
+++ b/src/main/webapp/resources/css/mypage_customer_inquiry_detail_page.css
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: center;
 }
-.image-container{
+/* .image-container{
     position: relative;
     overflow: hidden;
 }
@@ -27,7 +27,7 @@
 }
 .image-container:hover img{
     transform: scale(1.4);
-}
+} */
 #inquiry-image {
     width: 640px;
     height: 360px;
