--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                            	
+                                                	
     
     
     
@@ -10,8 +10,11 @@
     
     
     
-    <wb-module deploy-name="sprjt09-1.0.0-BUILD-SNAPSHOT">
-                                                                                        		
+    
+    <wb-module deploy-name="miaa-1.0.0-BUILD-SNAPSHOT">
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                                                                                                		
+        
         
         
         
@@ -23,7 +26,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                        		
+                                                                                                		
+        
         
         
         
@@ -35,7 +39,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                        		
+                                                                                                		
+        
         
         
         
@@ -47,7 +52,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                                        		
+                                                                                                		
+        
         
         
         
@@ -60,7 +66,8 @@
         
         <property name="java-output-path" value="target/classes"/>
         <property name="context-root" value="miaa"/>
-                                                                                        	
+                                                                                                	
+    
     
     
     
@@ -72,7 +79,8 @@
     
     
     </wb-module>
-                                            
+                                                
+
 
 
 
