--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                	
+                                                    	
+    
     
     
     
@@ -12,9 +13,11 @@
     
     
     <wb-module deploy-name="sprjt09-1.0.0-BUILD-SNAPSHOT">
-                
+                        
+        
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                		
+                                                                                                        		
+        
         
         
         
@@ -27,7 +30,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                		
+                                                                                                        		
+        
         
         
         
@@ -40,7 +44,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                                		
+                                                                                                        		
+        
         
         
         
@@ -53,8 +58,10 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-                                                                                                		
+                                                                                                        		
+        
         
         
         
@@ -67,9 +74,9 @@
         
         
         <property name="java-output-path" value="target/classes"/>
-                
-        <property name="context-root" value="sprjt09"/>
-                                                                                                	
+        <property name="context-root" value="miaa"/>
+                                                                                                        	
+    
     
     
     
@@ -82,7 +89,8 @@
     
     
     </wb-module>
-                                                
+                                                    
+
 
 
 
