--- a/src/main/webapp/resources/css/mypage_matching_alarm_detail_list_page.css
+++ b/src/main/webapp/resources/css/mypage_matching_alarm_detail_list_page.css
@@ -1,33 +1,23 @@
 .main-body {
-    width: 1200px;
+    width: 1220px;
 }
 
-.main-selection {
-    width: 1180px;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
+
+.page_root {
+	line-height: 50px;
+	text-align: right;
+	margin-right: 25px;
 }
+
+
+
+
 
 .page-route {
     font-size: 12px;
 }
 
-.selection-name {
-    height: 77px;
-    width: 180px;
-    font-size: 30px;
-    font-weight: 600;
-    margin-top: 10px;
-    border-bottom: 2px solid #000000;
-    display: flex;
-    align-items: center;
-}
 
-.selection-explain {
-    font-size: 16px;
-    margin-top: 6px;
-}
 
 .content-selection {
     width: 1180px;
@@ -47,7 +37,8 @@
     width: 1160px;
     height: 83px;
     display: flex;
-    align-items: center;
+    align-items: center; 
+  
 }
 
 .list-control-container {
@@ -76,7 +67,10 @@
     display: flex;
     padding: 0;
     align-items: center;
-    margin-left: 15px;
+    /* 원진호_0410_수정 */
+    margin-left: 30px;
+    
+    
 }
 
 #btn-off-alert img {
@@ -85,32 +79,24 @@
 }
 
 #btn-delete {
-    margin-left: auto;
-    margin-right: 24px;
+ /*    margin-left: auto; */
+/*     margin-right: 24px; */
     background-color: #7F56D9;
     color: white;
+    margin-left: 700px;
 }
 
 .registrationed_alarm_keywords_list {
     width: 1160px;
-    height: 83px;
+    height: 30px;
     display: flex;
-    align-items: center;
+    padding-bottom: 10px;
+    /* align-items: center; */
+    justify-content: space-between;
 }
 
-.item_tag {
-    background-color: red;
-    border: 1px solid red;
-    border-radius: 10px;
-    text-decoration: none;
-    margin-left: 10px;
-}
 
-.show_all_result {
-    margin-left: auto;
-    text-decoration: none;
-    margin-right: 10px;
-}
+
 
 .info-table {
     width: 1160px;
@@ -262,3 +248,50 @@ ul.switchBtn-container > li > a {
     padding: 0.3em 0.6em;
     border: 1px solid #D0D5DD;
 }
+
+
+.item_tag_01 {
+	font-weight: bold;
+	background-color: #F7E8FF;
+	color: #8910D9;
+	border-radius: 30%;
+	margin-left: 20px;
+}
+
+.item_tag_02 {
+	font-weight: bold;
+	background-color: #E8F1FF;
+	color: #0250EC;
+	border-radius: 30%;
+}
+
+.item_tag_03 {
+	font-weight: bold;
+	background-color: #FFE5E8;
+	color: #D20319;
+	border-radius: 30%;
+}
+
+.item_tag_04 {
+	font-weight: bold;
+	background-color: #FFEFE4;
+	color: #EE5800;
+	border-radius: 30%;
+}
+
+.item_tag_05 {
+	font-weight: bold;
+	background-color: #D8F7E6;
+	color: #00692A;
+	border-radius: 30%;
+}
+
+.show_all_result {
+	margin-left: 60px;
+	margin-right: 20px;
+}
+
+
+
+
+
