--- a/src/main/webapp/resources/css/mypage_customer_inquiry_list_page.css
+++ b/src/main/webapp/resources/css/mypage_customer_inquiry_list_page.css
@@ -20,6 +20,101 @@ a:hover{
 	box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 2px 6px 0px
 		rgba(0, 0, 0, 0.14), 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
 }
+/* 검색창 프레임 */
+.searchbar-container {
+  /* background-color: aquamarine; */
+  padding-top: 1rem;
+}
+
+.searchbar-container form {
+  display: flex;
+  flex-direction: column;
+}
+
+.searchbar-mutil-group {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.searchbar-select-group {
+  display: flex;
+  position: relative;
+}
+
+.searchbar-title {
+  width: 7.5rem;
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+}
+
+.searchbar-title>span {
+  padding: 0.8rem 1rem;
+  /* text-decoration: underline;
+  font-weight: 400; */
+}
+
+.searchbar-content {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-right: 1rem;
+  /* justify-content: flex-start; */
+}
+
+.searchbar-content>span {
+  padding: 0.8rem 1rem;
+
+}
+
+.searchbar-content>input {
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  font-size: 0.8rem;
+  border-width: 0.0625rem;
+  font-family: "Noto Sans KR", sans-serif;
+  box-shadow: none;
+}
+
+.searchbar-content>select {
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  font-size: 0.8rem;
+  font-family: "Noto Sans KR", sans-serif;
+  border-width: 0.0625rem;
+}
+
+.search-btn-block {
+  margin-top: 1rem;
+  border-top: 0.0625rem solid #EAECF0;
+  padding: 0.5rem 0;
+  display: flex;
+  justify-content: center;
+}
+
+.search-btn-block>button:hover {
+  cursor: pointer;
+}
+
+.search-btn-block>button {
+  background: #0066ff;
+  border-radius: 8px;
+  padding: 10px 16px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  position: relative;
+  color: #ffffff;
+  border-style: none;
+  font-size: 15px;
+  line-height: 18px;
+  font-weight: 400;
+}
+
+/* 검색 결과프레임 */
+
 /*테이블 상단 캡션  */
 .table-caption-wrapper{
    display: flex;
